master2/less
In file included from master.cpp:5:0:
../lib/json.hpp: In function ‘bool nlohmann::operator<(nlohmann::basic_json<ObjectType, ArrayType, StringType, BooleanType, NumberIntegerType, NumberUnsignedType, NumberFloatType, AllocatorType, JSONSerializer>::const_reference, nlohmann::basic_json<ObjectType, ArrayType, StringType, BooleanType, NumberIntegerType, NumberUnsignedType, NumberFloatType, AllocatorType, JSONSerializer>::const_reference)’:
../lib/json.hpp:6057:62: error: wrong number of template arguments (1, should be 2)
                     return *lhs.m_value.array < *rhs.m_value.array;
                                                              ^~~~~
In file included from /usr/include/c++/7/tuple:39:0,
                 from /usr/include/c++/7/functional:54,
                 from /usr/include/x86_64-linux-gnu/c++/7/bits/stdc++.h:71,
                 from MasterConfig.cpp:3,
                 from master.cpp:1:
/usr/include/c++/7/array:94:12: note: provided for ‘template<class _Tp, long unsigned int _Nm> struct std::array’
     struct array
            ^~~~~
master.cpp: At global scope:
master.cpp:11:5: error: ‘Server’ does not name a type; did you mean ‘servent’?
     Server *mserver;
     ^~~~~~
     servent
master.cpp: In constructor ‘Master::Master()’:
master.cpp:13:14: error: no matching function for call to ‘MasterConfig::MasterConfig()’
     Master() {
              ^
In file included from master.cpp:1:0:
MasterConfig.cpp:18:5: note: candidate: MasterConfig::MasterConfig(std::__cxx11::string, ushort)
     MasterConfig(string ip, ushort port) {
     ^~~~~~~~~~~~
MasterConfig.cpp:18:5: note:   candidate expects 2 arguments, 0 provided
MasterConfig.cpp:11:7: note: candidate: MasterConfig::MasterConfig(const MasterConfig&)
 class MasterConfig {
       ^~~~~~~~~~~~
MasterConfig.cpp:11:7: note:   candidate expects 1 argument, 0 provided
MasterConfig.cpp:11:7: note: candidate: MasterConfig::MasterConfig(MasterConfig&&)
MasterConfig.cpp:11:7: note:   candidate expects 1 argument, 0 provided
master.cpp:14:9: error: ‘mserver’ was not declared in this scope
         mserver = new Server(host, port, handle_request);
         ^~~~~~~
master.cpp:14:9: note: suggested alternative: ‘servent’
         mserver = new Server(host, port, handle_request);
         ^~~~~~~
         servent
master.cpp:14:23: error: expected type-specifier before ‘Server’
         mserver = new Server(host, port, handle_request);
                       ^~~~~~
master.cpp: In member function ‘void Master::run()’:
master.cpp:18:9: error: ‘mserver’ was not declared in this scope
         mserver.run();
         ^~~~~~~
